--- a/SmartAlbums/app/src/main/res/values/colors.xml
+++ b/SmartAlbums/app/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="color_add_photos">#9e9e9e</color>
+    <color name="color_popupwindow_background">#6a6a6a</color>
+    <color name="color_white">#ffffff</color>
 </resources>
+
