--- a/SmartAlbums/app/src/main/res/values/colors.xml
+++ b/SmartAlbums/app/src/main/res/values/colors.xml
@@ -6,5 +6,8 @@
     <color name="color_add_photos">#9e9e9e</color>
     <color name="color_popupwindow_background">#6a6a6a</color>
     <color name="color_white">#ffffff</color>
+    <color name="color_add_photo_dailog_content">#333333</color>
+    <color name="color_add_photo_dailog_content_remark">#999999</color>
+    <color name="color_add_photo_dialog_line">#D8D8D8</color>
 </resources>
 
