--- a/SmartAlbums/app/src/main/res/values/styles.xml
+++ b/SmartAlbums/app/src/main/res/values/styles.xml
@@ -9,4 +9,24 @@
         <item name="windowNoTitle">true</item>
     </style>
 
+    <!--选择图片方式的弹窗样式-->
+    <style name="AddPhotoDialog" parent="@android:style/Theme.Dialog">
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <!--//设置dialog的背景，此处为系统给定的透明值 -->
+        <item name="android:windowFrame">@null</item>
+        <!--//Dialog的windowFrame框为无 -->
+        <item name="android:windowNoTitle">true</item>　　　　　　　　
+        <!--//是否显示标题-->
+        <item name="android:windowIsFloating">true</item>
+        <!--//是否浮现在activity之上 -->
+        <item name="android:windowIsTranslucent">true</item>
+        <!--//是否半透明 -->
+        <item name="android:windowContentOverlay">@null</item>
+        <!--//是否有覆盖 -->
+        <item name="android:windowAnimationStyle">@android:style/Animation.Dialog</item>
+        <!--//设置Activity出现方式 -->
+        <item name="android:backgroundDimEnabled">true</item>
+        <!--//背景是否模糊显示 -->
+    </style>
+
 </resources>
