--- a/SmartAlbums/app/src/main/res/values/styles.xml
+++ b/SmartAlbums/app/src/main/res/values/styles.xml
@@ -29,4 +29,17 @@
         <!--//背景是否模糊显示 -->
     </style>
 
+    <!--分割线-->
+    <style name="dividing_line_style">
+        <item name="android:layout_width">fill_parent</item>
+        <item name="android:layout_height">0.5dp</item>
+        <item name="android:background">#ffcccccc</item>
+    </style>
+
+
+    <style name="LoadingDialog" parent="Theme.AppCompat.Dialog">
+        <item name="android:backgroundDimEnabled">false</item>
+        <item name="android:windowBackground">@android:color/transparent</item>
+    </style>
+
 </resources>
