--- a/SmartAlbums/app/src/main/res/layout/activity_home_people_album.xml
+++ b/SmartAlbums/app/src/main/res/layout/activity_home_people_album.xml
@@ -32,13 +32,112 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/home_back" />
 
+    <android.support.v7.widget.CardView
+        android:id="@+id/card_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
+        app:cardCornerRadius="10dp"
+        app:cardElevation="2dp"
+        app:layout_constraintTop_toBottomOf="@+id/deviding_line1"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent">
+
+        <ImageView
+            android:id="@+id/selected_image"
+            android:layout_width="340dp"
+            android:layout_height="340dp"
+            android:src="@drawable/ai"
+            android:scaleType="fitXY"
+            app:layout_constraintTop_toBottomOf="@+id/deviding_line"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"/>
+    </android.support.v7.widget.CardView>
+
+    <View
+        android:id="@+id/deviding_line2"
+        android:layout_marginTop="40dp"
+        style="@style/dividing_line_style"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/card_view" />
 
 
 
+    <RadioGroup
+        android:id="@+id/radioGroup"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent">
 
+        <RadioButton
+            android:id="@+id/face_detection"
+            android:layout_width="0dp"
+            android:layout_height="50dp"
+            android:layout_weight="1"
+            android:background="@null"
+            android:button="@null"
+            android:drawablePadding="3dp"
+            android:drawableTop="@drawable/people_album"
+            android:gravity="center_horizontal"
+            android:text="人脸检测"
+            android:textColor="#2d7aff" />
 
+        <RadioButton
+            android:id="@+id/face_verification"
+            android:layout_width="0dp"
+            android:layout_height="50dp"
+            android:layout_weight="1"
+            android:background="@null"
+            android:button="@null"
+            android:drawablePadding="3dp"
+            android:drawableTop="@drawable/face_verification"
+            android:gravity="center_horizontal"
+            android:text="人脸验证"
+            android:textColor="#2d7aff" />
 
+        <RadioButton
+            android:id="@+id/face_clustering"
+            android:layout_width="0dp"
+            android:layout_height="50dp"
+            android:layout_weight="1"
+            android:background="@null"
+            android:button="@null"
+            android:drawablePadding="3dp"
+            android:drawableTop="@drawable/face_clustering"
+            android:gravity="center_horizontal"
+            android:text="人脸聚类"
+            android:textColor="#2d7aff" />
 
+    </RadioGroup>
+
+    <View
+        android:id="@+id/deviding_line3"
+        android:layout_marginBottom="10dp"
+        style="@style/dividing_line_style"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/radioGroup"/>
+
+    <LinearLayout
+        android:id="@+id/container"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:clipChildren="false"
+        android:gravity="left"
+        android:layerType="software"
+        android:orientation="horizontal"
+        app:layout_constraintTop_toBottomOf="@+id/deviding_line2"
+        app:layout_constraintBottom_toTopOf="@id/deviding_line3">
+
+        <android.support.v4.view.ViewPager
+            android:id="@+id/viewpage"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:clipChildren="false" >
+        </android.support.v4.view.ViewPager>
+    </LinearLayout>
 
 
 </android.support.constraint.ConstraintLayout>
