新增图片择优和图片评分页面

--- a/SmartAlbums/app/src/main/res/layout/activity_face_verification.xml
+++ b/SmartAlbums/app/src/main/res/layout/activity_face_verification.xml
@@ -131,7 +131,7 @@
             android:layout_height="223dp"
             android:layout_gravity="center"
             app:srp_max="100"
-            app:srp_progressColor="##2D7AFF"
+            app:srp_progressColor="#2D7AFF"
             app:srp_roundColor="#ffffff"
             app:srp_roundWidth="6dp"
             app:srp_startAngle="0"
